@@ -20,7 +20,6 @@ import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Objects;
 import java.util.concurrent.locks.ReentrantLock;
-import java.util.stream.Collectors;
 
 import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.LogManager;
@@ -34,6 +33,7 @@ import org.kitodo.data.database.converter.ProcessConverter;
 import org.kitodo.data.database.exceptions.DAOException;
 import org.kitodo.exceptions.ConfigurationException;
 import org.kitodo.exceptions.ExportException;
+import org.kitodo.exceptions.FileStructureValidationException;
 import org.kitodo.exceptions.MetadataException;
 import org.kitodo.production.enums.ProcessState;
 import org.kitodo.production.helper.Helper;
@@ -51,6 +51,7 @@ import org.kitodo.production.model.Subfolder;
 import org.kitodo.production.services.ServiceManager;
 import org.kitodo.production.services.data.ProcessService;
 import org.kitodo.production.services.file.FileService;
+import org.xml.sax.SAXException;
 
 public class ExportDms extends ExportMets {
     private static final Logger logger = LogManager.getLogger(ExportDms.class);
@@ -170,7 +171,7 @@ public class ExportDms extends ExportMets {
         try {
             return startExport(process,
                 processService.readMetadataFile(process).getDigitalDocument());
-        } catch (IOException | DAOException e) {
+        } catch (IOException | DAOException | SAXException | FileStructureValidationException e) {
             if (Objects.nonNull(exportDmsTask)) {
                 exportDmsTask.setException(e);
                 logger.error(Helper.getTranslation(ERROR_EXPORT, process.getTitle()), e);
@@ -191,7 +192,7 @@ public class ExportDms extends ExportMets {
      * @return boolean
      */
     private boolean startExport(Process process, LegacyMetsModsDigitalDocumentHelper newFile)
-            throws IOException, DAOException {
+            throws IOException, DAOException, SAXException, FileStructureValidationException {
 
         this.myPrefs = ServiceManager.getRulesetService().getPreferences(process.getRuleset());
 
@@ -232,7 +233,8 @@ public class ExportDms extends ExportMets {
     }
 
     private boolean prepareExportLocation(Process process,
-            LegacyMetsModsDigitalDocumentHelper gdzfile) throws IOException, DAOException {
+            LegacyMetsModsDigitalDocumentHelper gdzfile) throws IOException, DAOException, SAXException,
+            FileStructureValidationException {
 
         URI hotfolder = new File(process.getProject().getDmsImportRootPath()).toURI();
         String processTitle = Helper.getNormalizedTitle(process.getTitle());
@@ -260,7 +262,7 @@ public class ExportDms extends ExportMets {
     }
 
     private boolean exportImagesAndMetsToDestinationUri(Process process, LegacyMetsModsDigitalDocumentHelper gdzfile,
-            URI destination) throws IOException, DAOException {
+            URI destination) throws IOException, DAOException, SAXException, FileStructureValidationException {
 
         if (exportWithImages) {
             try {
@@ -325,7 +327,7 @@ public class ExportDms extends ExportMets {
     }
 
     private boolean asyncExportWithImport(Process process, LegacyMetsModsDigitalDocumentHelper gdzfile, URI userHome)
-            throws IOException, DAOException {
+            throws IOException, DAOException, SAXException, FileStructureValidationException {
 
         String atsPpnBand = Helper.getNormalizedTitle(process.getTitle());
         if (Objects.nonNull(exportDmsTask)) {
@@ -462,8 +464,7 @@ public class ExportDms extends ExportMets {
      */
     private void directoryDownload(Process process, URI destination) throws IOException, InterruptedException, URISyntaxException {
         Collection<Subfolder> processDirs = process.getProject().getFolders().parallelStream()
-                .filter(Folder::isCopyFolder).map(folder -> new Subfolder(process, folder))
-                .collect(Collectors.toList());
+                .filter(Folder::isCopyFolder).map(folder -> new Subfolder(process, folder)).toList();
         VariableReplacer variableReplacer = new VariableReplacer(null, process, null);
 
         String uriToDestination = destination.toString();
