@@ -18,9 +18,9 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
+import java.util.GregorianCalendar;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.tuple.Pair;
 import org.kitodo.production.helper.Helper;
@@ -137,7 +137,7 @@ public class Block {
      *            metadata to add
      */
     public void addMetadata(CountableMetadata countableMetadata) {
-        metadata.add(0, countableMetadata);
+        metadata.addFirst(countableMetadata);
     }
 
     /**
@@ -459,7 +459,7 @@ public class Block {
      * @return 'true' if duplicates are found anf 'false' if not.
      */
     public boolean checkIssuesWithSameHeading() {
-        List<String> issuesTitles = issues.stream().map(Issue::getHeading).collect(Collectors.toList());
+        List<String> issuesTitles = issues.stream().map(Issue::getHeading).toList();
         List<String> titles = new ArrayList<>();
         for (String title : issuesTitles) {
             if (titles.contains(title)) {
@@ -510,8 +510,10 @@ public class Block {
      */
     public void setFirstAppearanceDate(Date firstAppearance) {
         if (Objects.nonNull(firstAppearance)) {
-            firstAppearance.setHours(5);
-            setFirstAppearance(firstAppearance.toInstant().atZone(ZoneId.systemDefault()).toLocalDate());
+            GregorianCalendar gregorianCalendar = new GregorianCalendar();
+            gregorianCalendar.setTime(firstAppearance);
+            gregorianCalendar.set(GregorianCalendar.HOUR_OF_DAY, 5);
+            setFirstAppearance(gregorianCalendar.toInstant().atZone(ZoneId.systemDefault()).toLocalDate());
         }
     }
 
@@ -553,8 +555,10 @@ public class Block {
      */
     public void setLastAppearanceDate(Date lastAppearance) {
         if (Objects.nonNull(lastAppearance)) {
-            lastAppearance.setHours(5);
-            setLastAppearance(lastAppearance.toInstant().atZone(ZoneId.systemDefault()).toLocalDate());
+            GregorianCalendar gregorianCalendar = new GregorianCalendar();
+            gregorianCalendar.setTime(lastAppearance);
+            gregorianCalendar.set(GregorianCalendar.HOUR_OF_DAY, 5);
+            setLastAppearance(gregorianCalendar.toInstant().atZone(ZoneId.systemDefault()).toLocalDate());
         }
     }
 
