@@ -14,6 +14,7 @@ package org.kitodo.selenium.testframework.pages;
 import static org.awaitility.Awaitility.await;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
+import java.time.Duration;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 
@@ -95,7 +96,7 @@ public class MetadataEditorPage extends Page<MetadataEditorPage> {
     private WebElement imagePreviewButton;
 
     public MetadataEditorPage() {
-        super("metadataEditor.jsf");
+        super("metadataEditor");
     }
 
     @Override
@@ -200,7 +201,7 @@ public class MetadataEditorPage extends Page<MetadataEditorPage> {
         moveAction.dragAndDrop(secondChildNode, dropArea).build().perform();
     }
 
-    public ProcessesPage saveAndExit() throws InstantiationException, IllegalAccessException {
+    public ProcessesPage saveAndExit() throws ReflectiveOperationException {
         clickButtonAndWaitForRedirect(saveAndExitButton, Pages.getProcessesPage().getUrl());
         return Pages.getProcessesPage();
     }
@@ -329,6 +330,25 @@ public class MetadataEditorPage extends Page<MetadataEditorPage> {
     }
 
     /**
+     * Open context menu (right click) for linked child process with given process id.
+     *
+     * @param childProcessId ID of linked child process to open context menu for
+     */
+    public void openContextMenuForLinkedChildProcessById(int childProcessId) {
+        List<WebElement> linkedChildProcesses = Browser.getDriver().findElements(By.className("ui-treenode-label"));
+        for (WebElement linkedChildProcess : linkedChildProcesses) {
+            String linkedChildProcessText = linkedChildProcess.getText().strip();
+            if (linkedChildProcessText.startsWith("[" + childProcessId + "]")) {
+                new Actions(Browser.getDriver()).contextClick(linkedChildProcess).build().perform();
+                await().ignoreExceptions().pollDelay(100, TimeUnit.MILLISECONDS).atMost(5, TimeUnit.SECONDS).until(
+                        () -> contextMenuLogicalTree.isDisplayed()
+                );
+                break;
+            }
+        }
+    }
+
+    /**
      * Click on a menu entry in the structure tree context menu.
      * 
      * @param menuItemClassName the class name of the menu entry
@@ -383,14 +403,14 @@ public class MetadataEditorPage extends Page<MetadataEditorPage> {
                         .findElement(By.id(SAVE_AND_EXIT_BUTTON_ID))::isDisplayed);
         WebElement contextMenu = Browser.getDriver().findElement(By.id("contextMenuLogicalTree"));
         List<WebElement> menuItems = contextMenu.findElements(By.className("ui-menuitem"));
-        assertEquals(4, menuItems.size(), "Wrong number of context menu items");
+        assertEquals(5, menuItems.size(), "Wrong number of context menu items");
         // click "add element" option
-        menuItems.get(0).click();
+        menuItems.getFirst().click();
         // open "structure element type selection" menu
         clickItemWhenDisplayed(By.id("dialogAddDocStrucTypeForm:docStructAddTypeSelection"), 1000, 1000, 5);
         // click first option
         clickItemWhenDisplayed(By.id("dialogAddDocStrucTypeForm:docStructAddTypeSelection_1"), 1000, 500, 3);
-        WebDriverWait wait = new WebDriverWait(Browser.getDriver(), 3);
+        WebDriverWait wait = new WebDriverWait(Browser.getDriver(), Duration.ofSeconds(3));
         wait.until(ExpectedConditions.invisibilityOfElementLocated(By.id("dialogAddDocStrucTypeForm:docStructAddTypeSelection_1")));
         // add structure element with selected type by clicking "accept"/"apply" button
         Thread.sleep(1000);
